--- a/configuration.properties
+++ b/configuration.properties
@@ -5,4 +5,8 @@ fhc_login = http://fhctrip-qa.com/Account/LogOn?ReturnUrl=%2FAdmin%2FUserAdmin
 username = manager2
 password = Man1ager2!
 room_create_url = http://fhctrip-qa.com/admin/HotelroomAdmin/Create 
-
+glb_login = https://www.glbtrader.com/register-2.html
+glb_email = kadir6@mail.com
+glb_name = Kadir Kaya
+glb_phone = 01555337744
+glb_sifre = 12345asdf
