--- a/configuration.properties
+++ b/configuration.properties
@@ -11,3 +11,6 @@ glb_name = Kadir Kaya
 glb_phone = 01555337744
 glb_sifre = 12345asdf
 google_link = https://google.com/ 
+glb_search  = https://www.glbtrader.com/search.html
+glb_kelime  = camera
+
